--- a/lab1/lab1/CMakeLists.txt
+++ b/lab1/lab1/CMakeLists.txt
@@ -19,6 +19,7 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        everything.h everything.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
