at this point qt6 starts ok

--- a/lab3/lab3/CMakeLists.txt
+++ b/lab3/lab3/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 ###############################################################################
 
-set(USE_QT FALSE)
+set(USE_QT TRUE)
 
 set(PROJECT_SOURCES
         main.cpp
