test add client and server

--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -13,6 +13,14 @@ set(PROJECT_SOURCES
     main.cpp
     )
 
+set(CLIENT_SRC
+    client.cpp
+    )
+
+set(SERVER_SRC
+    server.cpp
+    )
+
 set(INCLUDE_DIRS
     /nix/var/nix/profiles/per-user/human/profile/include
     /home/human/Code/boost_1_82_0
@@ -26,8 +34,13 @@ include_directories(${INCLUDE_DIRS})
 link_directories(${LINK_DIRS})
 
 add_executable(${EXE} ${PROJECT_SOURCES})
-
 target_link_libraries(${EXE} boost_system boost_thread)
+
+add_executable(server ${SERVER_SRC})
+target_link_libraries(server boost_system boost_thread)
+
+add_executable(client ${CLIENT_SRC})
+target_link_libraries(client boost_system boost_thread)
 
 # if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
 #     qt_add_executable(lab3
